Fix Sonar issues (#214)